--- a/html/calendar_view_template.html
+++ b/html/calendar_view_template.html
@@ -175,25 +175,23 @@ date,changeSize\n\
         var footerSpan = rootElement.append("span").style({float: "left", display: "block", width: (width - cellSize * 3) + "px"});
         var span = footerSpan.append("span").style({float: "right"});
         span.append("label").html("Color threshold: ");
+        var colorThresholdLabel = span.append("label");
         span.append("button").text("-").on("click", function () {
             threshold -= 5;
             if (threshold < 0) threshold = 0;
-            console.log("threshold=" + threshold);
             data = parseRawData(rawData[rawDataIndex], threshold);
-            updateDaysColor(dayRects, data);
+            updateCalendarView(dayRects, data);
         });
         span.append("button").text("+").on("click", function () {
             threshold += 5;
             if (threshold > 100) threshold = 100;
-            console.log("threshold=" + threshold);
             data = parseRawData(rawData[rawDataIndex], threshold);
-            updateDaysColor(dayRects, data);
+            updateCalendarView(dayRects, data);
         });
         span.append("button").text("reset").on("click", function () {
             threshold = 95;
-            console.log("threshold=" + threshold);
             data = parseRawData(rawData[rawDataIndex], threshold);
-            updateDaysColor(dayRects, data);
+            updateCalendarView(dayRects, data);
         });
         span.append("span").style({width: "20px", display: "inline-block"});
         span.append("label").html("Change size measured in: ");
@@ -204,19 +202,20 @@ date,changeSize\n\
         dropDown.on("change", function() {
             rawDataIndex = +this.value;
             data = parseRawData(rawData[rawDataIndex], threshold);
-            updateDaysColor(dayRects, data);
+            updateCalendarView(dayRects, data);
         });
 
 
-        updateDaysColor(dayRects, data);
+        updateCalendarView(dayRects, data);
 
 
-        function updateDaysColor(dayRects, data) {
+        function updateCalendarView(dayRects, data) {
             dayRects.selectAll("title").text(function(d) { return d; });
             dayRects.filter(function(d){ return d in data; })
                     .attr("class", function(d) { return "day " + color(data[d].value); })
                     .select("title")
                     .text(function(d) { return "Date: " + d + "\nChange size: " + valueFormat(data[d].changeSize); });
+            colorThresholdLabel.html(threshold + "%");
         }
 
         function parseRawData(rawData, threshold) {
