--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
         <ul>
             <li>transforming VCS history into .csv format (csv because it's easy to read and analyze afterwards)</li>
             <li>analyzing history and displaying results using <a href="http://d3js.org/">d3.js</a> (requires a browser).
-                This part is currently a separate Groovy script.</li>
+                This is currently done in a separate Groovy script.</li>
         </ul>
         Originally inspired by <a href="https://github.com/michaelfeathers/delta-flora">Delta Flora</a> by Michael Feathers.
-        Has now diverged into something a bit different.
+        It has now diverged into something a bit different.
         <br/>
         WARNING: this is work-in-progress.
 
