--- a/html/treemap.html
+++ b/html/treemap.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-    <script src="d3.v2.js"></script>
-    <script src="d3.layout.js"></script>
+    <script src="d3.v2.min.js"></script>
+    <script src="d3.layout.min.js"></script>
     <style type="text/css">
         body {
             overflow: hidden;
