--- a/html/wordcloud.html
+++ b/html/wordcloud.html
@@ -20,7 +20,8 @@
         ]
     }/*data_placeholder*/;
 
-    normalizeWordSize(data);
+    adjustSizeOfShortWords(data.words);
+    normalizeWordSize(data.words);
     createWordCloud();
 
     function createWordCloud() {
@@ -63,7 +64,7 @@
                             var word = words[i];
                             if (word.text == d.text && word.size == d.size) {
                                 words.splice(i, 1);
-//                                normalizeWordSize(data); // TODO
+                                normalizeWordSize(data.words);
                                 createWordCloud();
                                 break;
                             }
@@ -72,14 +73,19 @@
         }
     }
 
-    function normalizeWordSize(data) {
-        var min = d3.min(data.words, function (d) { return d.size; });
-        var max = d3.max(data.words, function (d) { return d.size; });
+    function adjustSizeOfShortWords(words) {
+        words.forEach(function (word) {
+            if (word.text.length < 5) word.size = (word.size * 1.3);
+        });
+    }
+
+    function normalizeWordSize(words) {
+        var min = d3.min(words, function (d) { return d.size; });
+        var max = d3.max(words, function (d) { return d.size; });
         var range = (max != min ? max - min : 1);
-        data.words = data.words.map(function (word) {
-            if (word.text.length < 5) word.size += (max * 0.3); // this is to make shorter words more noticeable
-            word.size = Math.round(5 + ((word.size - min) * 75 / range));
-            return word;
+        console.log(words);
+        words.forEach(function (word) {
+            word.size = Math.round(5 + ((word.size - min) * 100 / range));
         });
     }
 
